--- a/frontend/src/app/componentes/calendarioAtiv/calendarioAtiv.component.css
+++ b/frontend/src/app/componentes/calendarioAtiv/calendarioAtiv.component.css
@@ -24,7 +24,7 @@
 
 
 .selecionado {
-  background-color: #add8e6; 
+  background-color: #add8e6;
   border: 2px solid #0000ff;
   color: #000;
 }
@@ -316,32 +316,96 @@
   background-color: #d3f9d8;
 }
 
-.tooltip {
-  position: absolute;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  padding: 5px;
-  font-size: 12px;
-  color: #333;
-  z-index: 10;
-}
-
+/* Realce dos dias */
 .com-atividade {
-  background-color: #ffeb3b;
-  font-weight: bold;
+  background-color: #cce5ff;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 .selecionado {
-  background-color: #4caf50;
-  color: white;
+  border: 2px solid #007bff;
+  background-color: #007bff;
+  color: #fff;
 }
 
+.dia {
+  text-align: center;
+  padding: 10px;
+  margin: 5px;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+}
+
+.semanas {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 5px;
+}
+
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+
 .atividade-info {
+  margin-top: 20px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+}
+
+.atividades-lista {
   margin-top: 20px;
   padding: 10px;
   border: 1px solid #ccc;
   background-color: #f9f9f9;
 }
+
+.sem-atividades {
+  margin-top: 20px;
+  padding: 10px;
+  font-style: italic;
+  color: gray;
+}
+
+
+
+
+
+
+
+.atividades-lista,
+.sem-atividades {
+  justify-content: center;
+  position: fixed;
+  padding: 20px;
+  border: 1px solid #ccc;
+  background-color: #f9f9f9;
+  width: 40%;
+  height: 130px;
+  margin-top: 500px;
+  left: 61%;
+  transform: translateX(-50%);
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  animation: fadeIn 0.5s ease-in-out;
+  font-family: 'Arial', sans-serif;
+  text-align: center;
+}
+
+.sem-atividades {
+  font-style: italic;
+  color: gray;
+}
+
+
 
 
 
