--- a/frontend/src/app/componentes/presenca-calendario/presenca-calendario.component.html
+++ b/frontend/src/app/componentes/presenca-calendario/presenca-calendario.component.html
@@ -21,12 +21,14 @@
     <h1 id="teste">Presenças do dia:</h1>
 
     <div id="calendariu" class="calendario">
+      <!-- Cabeçalho do Calendário -->
       <div class="header">
         <button id="anterior" (click)="mudarMes(-1)"><</button>
         <h2 id="mesesCalen">{{ mes }} {{ ano }}</h2>
         <button id="sucessor" (click)="mudarMes(1)">></button>
       </div>
 
+      <!-- Dias da Semana -->
       <div class="dias">
         <div class="dia"><strong>Dom</strong></div>
         <div class="dia"><strong>Seg</strong></div>
@@ -37,6 +39,7 @@
         <div class="dia"><strong>Sáb</strong></div>
       </div>
 
+      <!-- Dias do Mês -->
       <div class="semanas">
         <div *ngFor="let dia of dias"
               class="dia"
@@ -57,7 +60,6 @@
         <li *ngFor="let atividade of atividadesDoDia">
           <strong>Nome:</strong> {{ atividade.nome }} <br>
           <strong>CPF:</strong> {{ atividade.cpf }} <br>
-          <strong>Data:</strong> {{ atividade.data | date: 'dd/MM/yyyy' }} <br>
         </li>
       </ul>
     </div>
@@ -66,5 +68,6 @@
     <div *ngIf="atividadesDoDia.length === 0 && diaSelecionado" class="sem-atividades">
       <p>Não há atividades para o dia {{ diaSelecionado }} de {{ mes }}.</p>
     </div>
+
   </aside>
 </main>
