--- a/frontend/src/app/componentes/forget-password/forget-password.component.html
+++ b/frontend/src/app/componentes/forget-password/forget-password.component.html
@@ -32,6 +32,16 @@
           <h2 id="resetPasswordTitle">Redefinir Senha</h2>
           <form #resetForm="ngForm" (ngSubmit)="resetarSenha()">
             <div>
+              <label for="token">Token:</label>
+              <input
+                type="text"
+                id="token"
+                [(ngModel)]="token"
+                name="token"
+                required
+              />
+            </div>
+            <div>
               <label for="novaSenha">Nova Senha:</label>
               <input
                 type="password"
@@ -46,6 +56,7 @@
             </button>
           </form>
         </div>
+
 
         <p *ngIf="mensagem">{{ mensagem }}</p>
       </div>
